# kr

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
assets/: demo.tape
src/: app.rs  event_loop.rs  input.rs  main.rs  models.rs  state.rs  utils.rs
src/k8s/: actions.rs  client.rs  config.rs  mod.rs  watcher.rs
src/ui/: components.rs  mod.rs  theme.rs
src/ui/views/: deployments_view.rs  describe_view.rs  logs_view.rs  mod.rs  pods_view.rs  popup_view.rs  secrets_view.rs  shell_view.rs
