[package]
name = "kr"
version = "0.3.0"
edition = "2024"
description = "A fast Kubernetes TUI for managing pods, deployments, and secrets"
authors = ["crn4"]
license = "MIT"
repository = "https://github.com/crn4/kr"
keywords = ["kubernetes", "tui", "kubectl", "k8s", "cli"]
categories = ["command-line-utilities"]

[dependencies]
tokio = { version = "1", features = ["full"] }
kube = { version = "3", features = ["runtime", "derive", "client"] }
k8s-openapi = { version = "0.27", features = ["latest"] }
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
clap = { version = "4", features = ["derive"] }
arboard = "3"
anyhow = "1"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
jiff = "0.2"
dirs = "6"
shlex = "1"
portable-pty = "0.9"
vt100 = "0.16"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http = "1"
bytes = "1"
